<?xml version="1.0" encoding="utf-8"?>
<!-- 我的→设置→关于 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/apk_bg_title" >

    <include
        android:id="@+id/top"
        layout="@layout/item_title" />

    <TextView
        android:id="@+id/tv_about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/icon"
        android:gravity="center"
        android:text="版本1.0"
        android:textColor="@color/more_t1"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/rl_about_updata"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tv_about_version"
        android:layout_marginBottom="5dp"
        android:scrollbars="none"
        android:background="@color/apk_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                android:textColor="@color/more_t1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/about_detail"
                android:textColor="@color/more_t2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_note_title"
                android:textColor="@color/more_t1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/about_note_detail"
                android:textColor="@color/more_t2"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:text="@string/about_note_end"
                android:textColor="@color/more_t2"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>